--- a/index.html
+++ b/index.html
@@ -3,34 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QUANTUM VAULT - Hacking Articles</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Hack to survive - Hacking Articles</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet -->
 </head>
 <body>
-    <header>
-        <h1 class="glitch-title">QUANTUM VAULT</h1>
-        <nav>
-            <button id="viewArticles">View Articles</button>
-            <button id="postArticle">Post an Article</button>
-        </nav>
-    </header>
+    <h1>Hacking Articles</h1>
+    <div id="buttons">
+        <button id="viewArticles">View Articles</button>
+        <button id="postArticle">Post Article</button>
+    </div>
 
-    <section id="articles-section" class="hidden">
-        <h2>Hacking Articles</h2>
-        <input type="text" id="searchBar" placeholder="Search articles...">
+    <!-- Section to view articles -->
+    <div id="viewArticlesSection">
         <div id="articles"></div>
-    </section>
+    </div>
 
-    <section id="post-section" class="hidden">
-        <h2>Submit Your Article</h2>
+    <!-- Section to post a new article -->
+    <div id="post-section">
+        <h2>Post a New Article</h2>
         <form id="articleForm">
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title" required><br><br>
-            <label for="content">Content:</label>
-            <textarea id="content" name="content" required></textarea><br><br>
-            <button type="submit">Submit</button>
+            <input type="text" id="title" placeholder="Article Title" required>
+            <textarea id="content" placeholder="Article Content" required></textarea>
+            <button type="submit">Submit Article</button>
         </form>
-    </section>
+    </div>
 
     <script src="script.js"></script>
 </body>
